WindGroup Dev/src/objects/GR_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Line__c</fullName>
        <label>Budget Line</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lift</fullName>
                </value>
                <value>
                    <fullName>Pump</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goods_Receipt__c</fullName>
        <label>Goods Receipt</label>
        <referenceTo>Goods_Receipt__c</referenceTo>
        <relationshipLabel>GR Line Items</relationshipLabel>
        <relationshipName>GR_Line_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Line_Item__c</fullName>
        <label>PO Line Item</label>
        <referenceTo>PO_Line_Item__c</referenceTo>
        <relationshipLabel>GR Line Items</relationshipLabel>
        <relationshipName>GR_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Amount__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Void_Datetime__c</fullName>
        <label>Void Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Void_Reason__c</fullName>
        <label>Void Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Void__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Void</label>
        <type>Checkbox</type>
    </fields>
    <label>GR Line Item</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-GRI-{000000}</displayFormat>
        <label>GR Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GR Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>